apps/spoolman/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: spoolman
  namespace: default
spec:
  rules:
  - host: spoolman.kube.home
    http:
      paths:
      - backend:
          service:
            name: spoolman-service
            port:
              number: 8000
        path: /
        pathType: Prefix
